Fix spacing between books on small wide screen.

--- a/books/static/css/app.css
+++ b/books/static/css/app.css
@@ -10,14 +10,6 @@ a {
   text-decoration: none;
 }
 
-.card-img-150 {
-  width: 150px;
-  height: 150px;
-  object-fit: cover;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 10px!important;
-}
-
 .photo {
   width: 275px;
   height: auto;
@@ -127,6 +119,25 @@ a {
   padding-top: 3%;
   text-transform: uppercase;
 }
+
+.card-img-150 {
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px!important;
+}
+
+
+@media (min-width: 992px) and (max-width: 1200px) {
+  .card-img-150, .cover.small {
+    width: 130px;
+    height: 130px;
+    background-size: 130px;
+  }
+}
+
+
 
 #autocomplete {
   position: absolute;
